Move Result to core.result
- Deprecates cr_analysis

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # Data related files
+/output
+/results.csv
+/labeler_exports
 data
 .data.bak
 datasets
@@ -8,8 +11,7 @@ bottlenecks
 history
 weights
 images
-/output
-/results.csv
+temp_images
 
 # Etc
 .DS_Store
